--- a/ROS_stm32f1_USB_VCP.ioc
+++ b/ROS_stm32f1_USB_VCP.ioc
@@ -23,8 +23,8 @@ Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.25.1
-MxDb.Version=DB.4.0.251
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -69,7 +69,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Itama/STM32Cube/Repository/STM32Cube_FW_F1_V1.6.1
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
@@ -81,6 +81,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ROS_stm32f1_USB_VCP.ioc
@@ -112,7 +113,11 @@ RCC.USBFreq_Value=48000000
 RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,VID,PRODUCT_STRING_CDC_FS,PID_CDC_FS,MANUFACTURER_STRING
+USB_DEVICE.MANUFACTURER_STRING=STM32
+USB_DEVICE.PID_CDC_FS=65278
+USB_DEVICE.PRODUCT_STRING_CDC_FS=\ ROS VCP
+USB_DEVICE.VID=0x1209
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_tim1.Mode=TIM1
